Fix for the overlapping toolbar, fixing this fixes the broken and small layout

--- a/less/gn_view_dutch.less
+++ b/less/gn_view_dutch.less
@@ -2577,12 +2577,7 @@ p {
     .main {
       .panel {
         .panel-heading {
-          .btn-toolbar {
-            float: none !important;
-            @media (min-width: @screen-md-min) {
-              float: right !important;
-            }
-          }
+          .clearfix();
         }
       }
     }
